Updates from ShareLaTeX

--- a/figures/language-counts.tex
+++ b/figures/language-counts.tex
@@ -1,12 +1,13 @@
 \begin{table}[ht]
   \centering
-  \begin{tabular}{lrr}
+  \small
+  \begin{tabular}{lrrr}
     \toprule
-    Language & Tweet count & Share \% \\
+    Language & Tweet count & Share \% & Avg. token count \\
     \midrule
-    Latvian     & 61\,869  & 45.4\%  \\
-    Russian     & 46\,070  & 33.9\%  \\
-    English     & 28\,128  & 20.7\%  \\
+    Latvian     & 61\,869  & 45.4\% & 15 \\
+    Russian     & 46\,070  & 33.9\% & 11 \\
+    English     & 28\,128  & 20.7\% & 14 \\
     \bottomrule
   \end{tabular}
   \caption{Language distribution in the final collection.}
