--- a/paper.tex
+++ b/paper.tex
@@ -43,7 +43,7 @@ Comparable corpora are widely used by the natural language processing community 
 
 Despite the fact that Latvian and Russian are widely used, there is little interaction between the two ethnic communities. The local media consists of two subsystems (Latvian and Russian) which use different sources and present different views on current affairs \cite{muiznieks2010}. Even though large media portals tend to have separate Latvian and Russian web-sites, the same opinions are found in comments to controversial content on both versions of web-sites, making the Internet a public space for a dialogue  between the ethnic communities \cite{sulmane2010}. A corpus of user generated content from Riga is a fruitful resource for studying the integration of the two communities, by identifying what is being discussed; how, and most importantly why it is being discussed.
 
-The pilot corpus\footnotemark{} consists of tweets over the period of 5 months (November 2016 to March 2017). The main goal of the analysis is to investigate whether a creation of a comparable tweet corpus is feasible and what the corpus construction strategy should be. To see whether the pilot corpus is comparable, the peaks of Twitter usage were identified. These peaks correspond to real world events (national celebrations, international political affairs and weather). The events are actively discussed in all languages, but in different proportions (Section~\ref{sec:timeline}).
+The pilot corpus\footnotemark{} consists of tweets over the period of 5 months (November 2016 to March 2017). The main goal of the analysis is to investigate whether a creation of a comparable tweet corpus is feasible and what the corpus construction strategy should be. To see whether the pilot corpus is comparable, the peaks of Twitter usage were analysed. These peaks correspond to real world events (national celebrations, international political affairs and weather). The events are actively discussed in all languages, but in different proportions (Section~\ref{sec:timeline}).
 
 \footnotetext{\url{https://doi.org/10.5281/zenodo.582300}}
 
@@ -80,13 +80,17 @@ The collected tweets had to be geo-located and had to originate from the area of
 
 \footnotetext{The \texttt{locations} parameter was set to \texttt{23.9325829, 56.8570671, 24.3247299, 57.0859184}}
 
-% IMS My old observations (2010-2012) were that very few tweets had valid geo data. Has that changed?
+251\,083 tweets were collected within the period from the 1st of November 2016 to the 31st of March 2017. On April 14th 2017, the collection was rehydrated\footnotemark{} by querying the Twitter API with the collected tweet IDs to get rid of the deleted tweets. In addition, the tweets that
+%
+\footnotetext{Since distribution of raw tweet data is not allowed, tweets IDs are shared instead. Hydration is the process of retrieval of raw tweet data by IDs.}
+%
+originated from retweets were added to the collection: the JSON\footnotemark{} representation of a retweet includes the original tweet, which was extracted and added to the collection. The rehydrated and expanded collection resulted in a total of 220\,883 tweets. %Table~\ref{tab:tweet-counts} summarises the number of collected tweets.
 
-251\,083 tweets were collected within the period from the 1st of November 2016 to the 31st of March 2017. On April 14th 2017, the collection was rehydrated by querying the Twitter API with the collected tweet IDs to get rid of the deleted tweets. In addition, the tweets that originated from retweets were added to the collection: the JSON representation of a retweet includes the original tweet, which was extracted and added to the collection. The rehydrated and expanded collection resulted in a total of 220\,883 tweets. %Table~\ref{tab:tweet-counts} summarises the number of collected tweets.
+\footnotetext{\url{http://json.org}}
 
 % \input{figures/tweet-counts.tex}
 
-Further analysis of the extended rehydrated collection showed that there are 23\,115 (10.5\%) tweets that originated from check-ins on Foursquare. %\footnote{\url{https://foursquare.com}} 
+Further analysis of the extended rehydrated collection showed that there are 23\,115 (10.5\%) tweets that originated from check-ins on Foursquare.\footnote{\url{https://foursquare.com}}
 This motivated additional filtering of the rehydrated collection, as ``check-in tweets'' follow a predefined template most of the time and thus do not reflect real language use. % What does this mean and why?
 
 \input{figures/client-counts.tex}
